--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,12 @@
     <string name="spectacular_breakout">Spectacular Breakout</string>
     <string name="share">Share</string>
 
+    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
+    <string name="ok">OK</string>
+    <string name="permission_denied_explanation">Permission was denied, but is needed for core
+        functionality.</string>
+    <string name="settings">Settings</string>
+    <string name="intro_text">Hi! Let\'s track daily cumulative steps. Use the menu to explore additional actions.</string>
+    <string name="read_step_data">Read step data</string>
+
 </resources>
